--- a/frontend-app/src/app/globals.css
+++ b/frontend-app/src/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  --cursor-button: pointer;
+  --cursor-menu-item: pointer;
+}
+
 /* Toast root */
 .ToastRoot {
   background-color: white;
